--- a/Billiards.UI/App.xaml
+++ b/Billiards.UI/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="BilliardManagement.App"
+﻿<Application x:Class="Billiards.UI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:BilliardManagement"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Billiards.UI"
+             StartupUri="LoginWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
