--- a/Billiards.UI/Views/CustomerManagementView.xaml
+++ b/Billiards.UI/Views/CustomerManagementView.xaml
@@ -46,7 +46,8 @@
 
                 <StackPanel Grid.Row="1" Margin="0,0,0,10">
                     <TextBlock Text="Số điện thoại:" Margin="0,0,0,5"/>
-                    <TextBox x:Name="txtPhoneNumber" Height="30"/>
+                    <TextBox x:Name="txtPhoneNumber" Height="30" TextChanged="txtPhoneNumber_TextChanged"/>
+                    <TextBlock x:Name="txtPhoneValidation" Margin="0,5,0,0" Foreground="OrangeRed"/>
                 </StackPanel>
 
                 <StackPanel Grid.Row="2" Margin="0,0,0,20">
