--- a/Billiards.UI/Windows/CheckoutWindow.xaml
+++ b/Billiards.UI/Windows/CheckoutWindow.xaml
@@ -97,7 +97,8 @@
                 </StackPanel>
                 <StackPanel Grid.Column="1">
                     <TextBlock Text="Số điện thoại khách hàng:" Margin="0,0,0,5"/>
-                    <TextBox x:Name="txtCustomerPhone"/>
+                    <TextBox x:Name="txtCustomerPhone" TextChanged="txtCustomerPhone_TextChanged"/>
+                    <TextBlock x:Name="txtCustomerName" Margin="0,5,0,0" Foreground="Gray"/>
                 </StackPanel>
             </Grid>
         </GroupBox>
