--- a/Billiards.UI/Views/PricingManagementView.xaml
+++ b/Billiards.UI/Views/PricingManagementView.xaml
@@ -58,7 +58,7 @@
                 <StackPanel Grid.Row="2" Margin="0,0,0,10">
                     <TextBlock Text="Giờ kết thúc (HH:mm):" Margin="0,0,0,5"/>
                     <TextBox x:Name="txtEndTime" Height="30" Text="22:00"/>
-                    <TextBlock Text="Ví dụ: 22:00, 24:00" FontSize="10" Foreground="Gray" Margin="0,2,0,0"/>
+                    <TextBlock Text="Ví dụ: 22:00, 23:59" FontSize="10" Foreground="Gray" Margin="0,2,0,0"/>
                 </StackPanel>
 
                 <StackPanel Grid.Row="3" Margin="0,0,0,20">
@@ -67,8 +67,8 @@
                 </StackPanel>
 
                 <StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Right">
-                    <Button x:Name="btnAddNew" Content="Thêm mới" Width="100" Height="35" Margin="5,0" Click="btnAddNew_Click"/>
-                    <Button x:Name="btnSave" Content="Lưu" Width="100" Height="35" Margin="5,0" Click="btnSave_Click"/>
+                    <Button x:Name="btnAddNew" Content="Làm mới" Width="100" Height="35" Margin="5,0" Click="btnAddNew_Click"/>
+                    <Button x:Name="btnSave" Content="Tạo/Lưu" Width="100" Height="35" Margin="5,0" Click="btnSave_Click"/>
                     <Button x:Name="btnDelete" Content="Xóa" Width="100" Height="35" Margin="5,0" Click="btnDelete_Click"/>
                 </StackPanel>
             </Grid>
